[package]
name = "klok"
version = "0.2.5"
edition = "2021"
authors = ["amatagonsk"]
license = "MIT"
description = "simple terminal clock."
repository = "https://github.com/amatagonsk/klok"
keywords = ["clock", "terminal", "ratatui", "tui"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
crossterm = "0.28"
ratatui = "0.28"
tui-big-text = "0.6"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
